@@ -78,9 +78,19 @@ if __name__ == '__main__':
         util.set_admin_log_config_filename (admin_log_config_filename)
         util.set_readable_log_config_filename (readable_log_config_filename)
 
+        user_name = util.get_user_name ()
+
+        if userdb.get_database().is_sabayon_controlled (user_name):
+            try:
+                shutil.rmtree (os.path.join (util.get_home_dir (), ".gconf.xml.defaults"))
+                shutil.rmtree (os.path.join (util.get_home_dir (), ".gconf.xml.mandatory"))
+                os.mkdir (os.path.join (util.get_home_dir (), ".gconf.xml.defaults"))
+                os.mkdir (os.path.join (util.get_home_dir (), ".gconf.xml.mandatory"))
+            except:
+                pass
+
         num_args = len (args)
         if num_args == 0:
-            user_name = util.get_user_name ()
             profile_name = userdb.get_database().get_profile (user_name)
             if not profile_name:
                 sys.stderr.write (_("No profile for user '%s' found\n") % user_name)
